--- a/Domestic Box Office Collection/dom_week.html
+++ b/Domestic Box Office Collection/dom_week.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Film - Stats: Highest Week-Wise Collection</title>
+	<title>Film - Stats: Highest Circuit-Wise Collection</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="../assets/css/main.css" />
@@ -38,9 +38,9 @@
 					<h2>Domestic Box Office Collection:</h2>
 				</a>
 				<hr>
-				<h3 class="gyb">Highest Week-Wise Nett Collections:</h3>
+				<h3 class="gyb">Highest Circuit-Wise Nett Collections:</h3>
 				<hr class="gyb">
-				<h3>Highest Opening Week Nett Collections:</h3>
+				<h3>Highest Mumbai-Gujarat Nett Collections:</h3>
 				<div class="row">
 					<div class="col slt1 ss2">
 						<select name="year" class="addselect" id="year">
@@ -66,7 +66,7 @@
 						<th valign="middle" class="ww "><a href="">Poster</a></th>
 						<th valign="middle" class="ww"><a href="">Movie Name</a></th>
 						<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
-						<th valign="middle" class="ww"><a href="dom_week.html">Opening Week</a></th>
+						<th valign="middle" class="ww"><a href="dom_circuit.html">Mumbai-Gujarat</a></th>
 						<th valign="middle" class="ww"><a href="dom_lifetime_nett.html">Lifetime Nett</a></th>
 					</tr>
 					<tr>
@@ -77,30 +77,30 @@
 									class=" lazyloaded" src="../images/bahubali2.jpg" data-src="../images/bahubali2.jpg"
 									width="50" height="70"></a></td>
 						<td><a href="../detail.html">Bahubali 2 [Hindi]</a></td>
-						<td>28 April 2017</td>
-						<td><span>&#8377;</span>&nbsp;246.47 Cr</td>
+						<td>2 Oct 2019</td>
+						<td><span>&#8377;</span>&nbsp;185.76 Cr</td>
 						<td><span>&#8377;</span>&nbsp;510.36 Cr</td>
 					</tr>
 					<tr>
 						<td>2.</td>
 						<td><a href="../detail.html"
 								style="clear: left; float: left; margin-bottom: -1em; "><noscript><img
-										src="../images/sultan.jpg" width='50' height='70' /></noscript><img
-									class=" lazyloaded" src="../images/sultan.jpg" data-src="../images/sultan.jpg"
+										src="../images/tanhaji.jpg" width='50' height='70' /></noscript><img
+									class=" lazyloaded" src="../images/tanhaji.jpg" data-src="../images/tanhaji.jpg"
 									width="50" height="70"></a></td>
-						<td><a href="../detail.html">Sultan</a></td>
-						<td>6 July 2016</td>
-						<td><span>&#8377;</span>&nbsp;208.99 Cr</td>
-						<td><span>&#8377;</span>&nbsp;300.67 Cr</td>
+						<td><a href="../detail.html">Tanhaji</a></td>
+						<td>10 Jan 2020</td>
+						<td><span>&#8377;</span>&nbsp;143.85 Cr</td>
+						<td><span>&#8377;</span>&nbsp;269.77 Cr</td>
 					</tr>
 					<tr>
 						<td>3.</td>
 						<td><a href="../detail.html"
 								style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="../images/tiger.jpg" width='50' height='70' /></noscript><img
-									class=" lazyloaded" src="../images/tiger.jpg" data-src="../images/tiger.jpg"
+										src="../images/dangal.jpg" width='50' height='70' /></noscript><img
+									class=" lazyloaded" src="../images/dangal.jpg" data-src="../images/dangal.jpg"
 									width="50" height="70"></a></td>
-						<td><a href="../detail.html">Tiger Zinda Hai</a></td>
+						<td><a href="../detail.html">Dangal</a></td>
 						<td>23 Dec 2016</td>
 						<td><span>&#8377;</span>&nbsp;104.26 Cr</td>
 						<td><span>&#8377;</span>&nbsp;387.29 Cr</td>
@@ -111,81 +111,62 @@
 						<div class="col">
 							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg"
-									width="70" height="90"></a>
+									class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="../detail.html"><b
-										class="sx">Bahubali 2 [Hindi]</b></a><br>
-								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;28 Apr 2017<br>
-								<a href="dom_week.html"><b>Opening
-										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
-								<a href="dom_lifetime_nett.html"><b>Lifetime
-										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
+							<p class="sz"><b>1.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Bahubali 2 [Hindi]</b></a><br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;2 Oct 2019<br><								<a href="dom_circuit.html"><b>Mumbai-Gujarat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
-					</div>
-					<hr>
+					</div><hr>
 					<div class="row">
 						<div class="col">
 							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="../images/sultan.jpg" data-src="images/ramp.jpg" width="70"
+									class="lazyloaded" src="../images/tanhaji.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b
-										class="sx">Sultan</b></a><br>
-								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;6 July 2016<br>
-								<a href="dom_week.html"><b>Opening
-										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
-								<a href="dom_lifetime_nett.html"><b>Lifetime
-										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
+							<p class="sz"><b>2.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Tanhaji</b></a><br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;10 Jan 2020<br>
+								<a href="dom_circuit.html"><b>Mumbai-Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
-					</div>
-					<hr>
+					</div><hr>
+					<div class="row">
+						<div class="col">
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="../images/bahubali2.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="../images/dangal.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b>3.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Dangal</b></a><br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;23 Dec 2016<br>
+								<a href="dom_circuit.html"><b>Mumbai-Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
+							</p>
+						</div>
+					</div><hr>
 					<div class="row">
 						<div class="col">
 							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="../images/tiger.jpg" data-src="images/ramp.jpg" width="70"
+									class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Tiger
-										Zinda Hai</b></a><br>
-								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;22 Dec 2017<br>
-								<a href="dom_week.html"><b>Opening
-										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
-								<a href="dom_lifetime_nett.html"><b>Lifetime
-										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
+							<p class="sz"><b>4.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Bahubali 2 [Hindi]</b></a><br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;2 Oct 2019<br><								<a href="dom_circuit.html"><b>Mumbai-Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
-					</div>
-					<hr>
-					<div class="row">
-						<div class="col">
-							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="../images/simmba.jpg" data-src="images/ramp.jpg" width="70"
-									height="90"></a>
-						</div>
-						<div class="col">
-							<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="../detail.html"><b
-										class="sx">War</b></a><br>
-								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-								<a href="dom_week.html"><b>Opening
-										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
-								<a href="dom_lifetime_nett.html"><b>Lifetime
-										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
-							</p>
-						</div>
-					</div>
-					<hr>
+					</div><hr>
 				</div>
 			</div>
-
 		</section>
 
 		<!-- Footer -->
@@ -220,16 +201,12 @@
 			</div>
 			<div class="copyright">
 				<ul class="icons">
-					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span
-								class="label">Twitter</span></a></li>
-					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span
-								class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
-
-								<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span
-								class="label">Instagram</span></a></li>
+					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+					<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				&copy; Design By: <a href="#">Tech_Marketz</a>
+				&copy; Design By: <a href="#">Tech_Marketz</a>   
 			</div>
 		</footer>
 
