--- a/index.html
+++ b/index.html
@@ -46,25 +46,25 @@
 		<section class="wrapper style2">
 			<div class="inner">
 				<div class="row">
-					<div class="col">
+					<div class="col gyb1">
 						<h3>Search Here:</h3>
 					</div>
 					<div class="col sr">
-						<input type="text" placeholder="Search">
+						<input type="text" placeholder="Search" class="src">
 					</div>
-					<div class="col slct">
-						<select name="srch" id="srch">
-							<option value="all" class="l1">All </option>
-							<option value="actor" class="l1">Movies</option>
-							<option value="movies" class="l1">Actors</option>
-							<option value="movies" class="l1">Directors</option>
-							<option value="movies" class="l1">Producers</option>
-							<option value="movies" class="l1">Banners</option>
-							<option value="movies" class="l1">Story Writers</option>
-							<option value="movies" class="l1">Screenwriters</option>
-							<option value="movies" class="l1">Dialogists</option>
-							<option value="movies" class="l1">Musicians</option>
-							<option value="movies" class="l1">Lyricists</option>
+					<div class="col">
+						<select class="choose">
+							<option value="all" >All </option>
+							<option value="actor" >Movies</option>
+							<option value="movies" >Actors</option>
+							<option value="movies" >Directors</option>
+							<option value="movies" >Producers</option>
+							<option value="movies" >Banners</option>
+							<option value="movies" >Story Writers</option>
+							<option value="movies" >Screenwriters</option>
+							<option value="movies" >Dialogists</option>
+							<option value="movies" >Musicians</option>
+							<option value="movies" >Lyricists</option>
 						</select>
 					</div>
 					<div class="col">
