--- a/calender.html
+++ b/calender.html
@@ -37,29 +37,29 @@
 				<a href="calender.html"><h2>Release Date Calender Of Movies:</h2></a>
 				<hr>
 				<div class="row">
-					<div class="col select ss2">
-						<select name="year" class="addselect" id="year">
-							<option value="2k21" class="l1">Year</option>
-							<option value="2k21" class="l1"> 2021</option>
-							<option value="2k20" class="l1"> 2020</option>
-							<option value="2k19" class="l1"> 2019</option>
-							<option value="2k18" class="l1"> 2018</option>
-							<option value="2k17" class="l1"> 2017</option>
-							<option value="2k16" class="l1"> 2016</option>
-							<option value="2k15" class="l1"> 2015</option>
-							<option value="2k14" class="l1"> 2014</option>
-							<option value="2k13" class="l1"> 2013</option>
-							<option value="2k12" class="l1"> 2012</option>
-							<option value="2k11" class="l1"> 2011</option>
-							<option value="2k10" class="l1"> 2010</option>
-						</select><br>
+					<div class="col ss2">
+						<select class="choose">
+							<option disabled selected > Year </option>  
+							<option value="2k21" > 2021</option>
+							<option value="2k20" > 2020</option>
+							<option value="2k19" > 2019</option>
+							<option value="2k18" > 2018</option>
+							<option value="2k17" > 2017</option>
+							<option value="2k16" > 2016</option>
+							<option value="2k15" > 2015</option>
+							<option value="2k14" > 2014</option>
+							<option value="2k13" > 2013</option>
+							<option value="2k12" > 2012</option>
+							<option value="2k11" > 2011</option>
+							<option value="2k10" > 2010</option>
+					</select><br>
 					</div>
 				</div>
 				<table class="tab12">
 					<tr>
-						<th class="ww"><a href="">S.No.</a></th>
-						<th class="ww "><a href="">Poster</a></th>
-						<th class="ww"><a href="">Movie Name</a></th>
+						<th class="ww"><a >S.No.</a></th>
+						<th class="ww "><a >Poster</a></th>
+						<th class="ww"><a >Movie Name</a></th>
 						<th class="ww"><a href="calender.html">Release Date</a></th>
 						<th class="ww"><a href="Domestic Box Office Collection/dom_lifetime_nett.html">Domestic Lifetime Nett</a></th>
 						<th class="ww"><a href="verdict.html">Verdict</a></th>
