--- a/Domestic Box Office Collection/dom_open_week.html
+++ b/Domestic Box Office Collection/dom_open_week.html
@@ -41,28 +41,28 @@
 				<h3>Highest Opening Week Nett Collections:</h3>
 				<div class="row">
 					<div class="col slt ss2">
-						<select name="year" class="addselect" id="year">
-							<option value="2k21" class="l1"> Year</option>
-							<option value="2k21" class="l1"> 2021</option>
-							<option value="2k20" class="l1"> 2020</option>
-							<option value="2k19" class="l1"> 2019</option>
-							<option value="2k18" class="l1"> 2018</option>
-							<option value="2k17" class="l1"> 2017</option>
-							<option value="2k16" class="l1"> 2016</option>
-							<option value="2k15" class="l1"> 2015</option>
-							<option value="2k14" class="l1"> 2014</option>
-							<option value="2k13" class="l1"> 2013</option>
-							<option value="2k12" class="l1"> 2012</option>
-							<option value="2k11" class="l1"> 2011</option>
-							<option value="2k10" class="l1"> 2010</option>
-						</select><br>
+						<select class="choose">
+							<option disabled selected > Year </option>  
+							<option value="2k21" > 2021</option>
+							<option value="2k20" > 2020</option>
+							<option value="2k19" > 2019</option>
+							<option value="2k18" > 2018</option>
+							<option value="2k17" > 2017</option>
+							<option value="2k16" > 2016</option>
+							<option value="2k15" > 2015</option>
+							<option value="2k14" > 2014</option>
+							<option value="2k13" > 2013</option>
+							<option value="2k12" > 2012</option>
+							<option value="2k11" > 2011</option>
+							<option value="2k10" > 2010</option>
+					</select><br>
 					</div>
 				</div>
 				<table class="tab12">
 					<tr>
-						<th valign="middle" class="ww"><a href="">Rank</a></th>
-						<th valign="middle" class="ww "><a href="">Poster</a></th>
-						<th valign="middle" class="ww"><a href="">Movie Name</a></th>
+						<th valign="middle" class="ww"><a >Rank</a></th>
+						<th valign="middle" class="ww "><a >Poster</a></th>
+						<th valign="middle" class="ww"><a >Movie Name</a></th>
 						<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
 						<th valign="middle" class="ww"><a href="../screen.html">No. of Screens</a></th>
 						<th valign="middle" class="ww"><a href="dom_open_week.html">Opening Week</a></th>
