--- a/Domestic Box Office Collection/dom_circuit.html
+++ b/Domestic Box Office Collection/dom_circuit.html
@@ -38,35 +38,35 @@
 					<h2>Domestic Box Office Collection:</h2>
 				</a>
 				<hr>
-				<h3 class="gyb">Highest Circuit-Wise Nett Collection:</h3>
+				<h3 class="gyb">Highest Circuit-Wise Nett Collections:</h3>
 				<hr class="gyb">
-				<h3>Highest Mumbai - Gujarat Nett Collection:</h3>
+				<h3>Highest Mumbai-Gujarat Nett Collections:</h3>
 				<div class="row">
-					<div class="col slt1 ss2">
-						<select name="year" class="addselect" id="year">
-							<option value="2k21" class="l1"> Year</option>
-							<option value="2k21" class="l1"> 2021</option>
-							<option value="2k20" class="l1"> 2020</option>
-							<option value="2k19" class="l1"> 2019</option>
-							<option value="2k18" class="l1"> 2018</option>
-							<option value="2k17" class="l1"> 2017</option>
-							<option value="2k16" class="l1"> 2016</option>
-							<option value="2k15" class="l1"> 2015</option>
-							<option value="2k14" class="l1"> 2014</option>
-							<option value="2k13" class="l1"> 2013</option>
-							<option value="2k12" class="l1"> 2012</option>
-							<option value="2k11" class="l1"> 2011</option>
-							<option value="2k10" class="l1"> 2010</option>
-						</select><br>
+					<div class="col ss2">
+						<select class="choose">
+							<option disabled selected > Year </option>  
+							<option value="2k21" > 2021</option>
+							<option value="2k20" > 2020</option>
+							<option value="2k19" > 2019</option>
+							<option value="2k18" > 2018</option>
+							<option value="2k17" > 2017</option>
+							<option value="2k16" > 2016</option>
+							<option value="2k15" > 2015</option>
+							<option value="2k14" > 2014</option>
+							<option value="2k13" > 2013</option>
+							<option value="2k12" > 2012</option>
+							<option value="2k11" > 2011</option>
+							<option value="2k10" > 2010</option>
+					</select><br>
 					</div>
 				</div>
 				<table class="tab12">
 					<tr>
-						<th valign="middle" class="ww"><a href="">Rank</a></th>
-						<th valign="middle" class="ww "><a href="">Poster</a></th>
-						<th valign="middle" class="ww"><a href="">Movie Name</a></th>
+						<th valign="middle" class="ww"><a >Rank</a></th>
+						<th valign="middle" class="ww "><a >Poster</a></th>
+						<th valign="middle" class="ww"><a >Movie Name</a></th>
 						<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
-						<th valign="middle" class="ww"><a href="dom_circuit.html">Mumbai - Gujarat</a></th>
+						<th valign="middle" class="ww"><a href="dom_circuit.html">Mumbai-Gujarat</a></th>
 						<th valign="middle" class="ww"><a href="dom_lifetime_nett.html">Lifetime Nett</a></th>
 					</tr>
 					<tr>
@@ -115,9 +115,8 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>1.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Bahubali 2 [Hindi]</b></a><br>
-								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;2 Oct 2019<br></a>
-								<a href="dom_circuit.html"><b>Mumbai - Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+							<p class="sz"><b>1.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Bahubali 2 [Hindi]</b></a><br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;2 Oct 2019<br><								<a href="dom_circuit.html"><b>Mumbai-Gujarat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
@@ -130,9 +129,9 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>2.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Tanhaji</b></a><br>
-								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;10 Jan 2020<br></a>
-								<a href="dom_circuit.html"><b>Mumbai - Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+							<p class="sz"><b>2.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Tanhaji</b></a><br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;10 Jan 2020<br>
+								<a href="dom_circuit.html"><b>Mumbai-Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
@@ -145,9 +144,9 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>3.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Dangal</b></a><br>
-								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;23 Dec 2016<br></a>
-								<a href="dom_circuit.html"><b>Mumbai - Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+							<p class="sz"><b>3.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Dangal</b></a><br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;23 Dec 2016<br>
+								<a href="dom_circuit.html"><b>Mumbai-Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
@@ -160,9 +159,8 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>4.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Bahubali 2 [Hindi]</b></a><br>
-								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;2 Oct 2019<br></a>
-								<a href="dom_circuit.html"><b>Mumbai - Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+							<p class="sz"><b>4.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Bahubali 2 [Hindi]</b></a><br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;2 Oct 2019<br><								<a href="dom_circuit.html"><b>Mumbai-Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
