--- a/overseas.html
+++ b/overseas.html
@@ -52,15 +52,15 @@
 						<!-- Modal content -->
 							<div class="modal-content">
 								<span class="close">&times;</span> 
-								<p class="mc">Highest Circuit-Wise Gross Collections:</p><hr>
-								<UL id="lt" class="mc1">
-									<a href="Overseas Box Office Collection/over_circuit.html"><li class="mc1">USA/Canada</li>
-									<a href="Overseas Box Office Collection/over_circuit.html"><li class="mc1">United Kingdom</li>
-									<a href="Overseas Box Office Collection/over_circuit.html"><li class="mc1">Gulf</li>
-									<a href="Overseas Box Office Collection/over_circuit.html"><li class="mc1">Australia</li>
-									<a href="Overseas Box Office Collection/over_circuit.html"><li class="mc1">China</li>
-									<a href="Overseas Box Office Collection/over_circuit.html"><li class="mc1">Others</li>
-								</UL>
+								<h4>Highest Circuit-Wise Gross Collections:</h4><hr>
+								<h3>
+									<a href="Overseas Box Office Collection/over_circuit.html">• USA/Canada <br>
+									<a href="Overseas Box Office Collection/over_circuit.html">• United Kingdom <br>
+									<a href="Overseas Box Office Collection/over_circuit.html">• Gulf <br>
+									<a href="Overseas Box Office Collection/over_circuit.html">• Australia <br>
+									<a href="Overseas Box Office Collection/over_circuit.html">• China <br>
+									<a href="Overseas Box Office Collection/over_circuit.html">• Others <br>
+									</h4>
 							</div>
 						</div>
 						</ul>
