--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 							<option value="movies" >Directors</option>
 							<option value="movies" >Producers</option>
 							<option value="movies" >Banners</option>
-							<option value="movies" >Story Writers</option>
-							<option value="movies" >Screenwriters</option>
+							<option value="movies" >Writers</option>
+							<option value="movies" >Screenplay</option>
 							<option value="movies" >Dialogists</option>
 							<option value="movies" >Musicians</option>
 							<option value="movies" >Lyricists</option>
@@ -157,7 +157,7 @@
 						<hr>
 						<ul class="cn">
 							<li><a href="calender.html">
-									<h4>Release Date Calender Of Movies</h4>
+									<h4>Release Date Calendar Of Movies</h4>
 								</a></li>
 							<li><a href="domestic.html">
 									<h4>Domestic Box Office Collection</h4>
