--- a/calender.html
+++ b/calender.html
@@ -34,12 +34,13 @@
 		<!-- Two -->
 		<section class="wrapper style2">
 			<div class="inner">
-				<a href="calender.html"><h2>Release Date Calender Of Movies:</h2></a>
+				<a href="calender.html"><h2>Release Date Calendar Of Movies:</h2></a>
 				<hr>
 				<div class="row">
 					<div class="col ss2">
 						<select class="choose">
 							<option disabled selected > Year </option>  
+							<option value="2k21" > 2022</option>
 							<option value="2k21" > 2021</option>
 							<option value="2k20" > 2020</option>
 							<option value="2k19" > 2019</option>
