--- a/worldwide.html
+++ b/worldwide.html
@@ -84,12 +84,15 @@
 				</div>
 				<div class="copyright">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+						<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span
+									class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span
+									class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+						<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span
+									class="label">Instagram</span></a></li>
 					</ul>
-					&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>. Video: <a href="https://coverr.co">Coverr</a>.
+					&copy; Design By: <a href="#">Tech_Marketz</a>
 				</div>
 			</footer>
 
