--- a/domestic.html
+++ b/domestic.html
@@ -77,7 +77,7 @@
 									&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 								</div>
 								<div class="col-6">
-									<h4 class=""><a href="Domestic Box Office Collection/dom_week.html">• Opening
+									<h4 ><a href="Domestic Box Office Collection/dom_week.html">• Opening
 											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">• Second
 											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">• Third
 											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">• Fourth
