--- a/overseas.html
+++ b/overseas.html
@@ -54,7 +54,7 @@
 								<span class="close">&times;</span> 
 								<h4>Highest Circuit-Wise Gross Collections:</h4><hr>
 								<h3>
-									<a href="Overseas Box Office Collection/over_circuit.html">• USA/Canada <br>
+									<a href="Overseas Box Office Collection/over_circuit.html">• USA-Canada <br>
 									<a href="Overseas Box Office Collection/over_circuit.html">• United Kingdom <br>
 									<a href="Overseas Box Office Collection/over_circuit.html">• Gulf <br>
 									<a href="Overseas Box Office Collection/over_circuit.html">• Australia <br>
