--- a/calender.html
+++ b/calender.html
@@ -39,8 +39,8 @@
 				<div class="row">
 					<div class="col ss2">
 						<select class="choose">
-							<option disabled selected > Year </option>  
-							<option value="2k21" > 2022</option>
+							<option disabled selected > Year </option>
+							<option value="2k21" > 2022</option>  
 							<option value="2k21" > 2021</option>
 							<option value="2k20" > 2020</option>
 							<option value="2k19" > 2019</option>
@@ -109,7 +109,7 @@
 						</div>
 						<div class="col">
 							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Ramprasad Ki Tehrvi</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
+								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
 								<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<a href="verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;Disaster
 							</p>
@@ -124,7 +124,7 @@
 						</div>
 						<div class="col">
 							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Kaagaz</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
+								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
 								<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<a href="verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;Disaster
 							</p>
@@ -139,7 +139,7 @@
 						</div>
 						<div class="col">
 							<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">12 'O' Clock</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
+								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
 								<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<a href="verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;Disaster
 							</p>
@@ -154,7 +154,7 @@
 						</div>
 						<div class="col">
 							<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Simmba</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
+								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
 								<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<a href="verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;Disaster
 							</p>
