--- a/Overseas Box Office Collection/over_weekend.html
+++ b/Overseas Box Office Collection/over_weekend.html
@@ -117,9 +117,9 @@
 							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 										class="sx">Padmaavat</b></a><br>
 								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;25 Jan 2018<br>
-								<a href="over_weekend.html"><b>Opening Weekend $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_weekend.html"><b>Opening Weekend:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 								<a href="over_weekend.html"><b>Opening
-										Weekend <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+										Weekend:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 								Cr
 							</p>
 						</div>
@@ -136,9 +136,9 @@
 							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Dhoom
 										3</b></a><br>
 								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;20 Dec 2013<br>
-								<a href="over_weekend.html"><b>Opening Weekend $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_weekend.html"><b>Opening Weekend:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 								<a href="over_weekend.html"><b>Opening
-										Weekend <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+										Weekend:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 								Cr
 							</p>
 						</div>
@@ -155,9 +155,9 @@
 							<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 										class="sx">Sultan</b></a><br>
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;6 July 2016<br>
-								<a href="over_weekend.html"><b>Opening Weekend $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_weekend.html"><b>Opening Weekend:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 								<a href="over_weekend.html"><b>Opening
-										Weekend <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+										Weekend:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 								Cr
 							</p>
 						</div>
@@ -174,9 +174,9 @@
 							<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 										class="sx">War</b></a><br>
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-								<a href="over_weekend.html"><b>Opening Weekend $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_weekend.html"><b>Opening Weekend:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 								<a href="over_weekend.html"><b>Opening
-										Weekend <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+										Weekend:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 								Cr
 							</p>
 						</div>
