--- a/Overseas Box Office Collection/over_week.html
+++ b/Overseas Box Office Collection/over_week.html
@@ -100,9 +100,9 @@
 									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 												class="sx">Dhoom 3</b></a><br>
 										<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;20 Dec 2013<br>
-										<a href="over_week.html"><b>Opening Week $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+										<a href="over_week.html"><b>Opening Week:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 										<a href="over_week.html"><b>Opening
-												Week <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+												Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 										Cr
 									</p>
 								</div>
@@ -118,9 +118,9 @@
 								<div class="col">
 									<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Sultan</b></a><br>
 										<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;6 July 2016<br>
-										<a href="over_week.html"><b>Opening Week $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+										<a href="over_week.html"><b>Opening Week:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 										<a href="over_week.html"><b>Opening
-												Week <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+												Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 										Cr
 									</p>
 								</div>
@@ -137,9 +137,9 @@
 									<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 												class="sx">Dangal</b></a><br>
 										<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;23 Dec 2016<br>
-										<a href="over_week.html"><b>Opening Week $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+										<a href="over_week.html"><b>Opening Week:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 										<a href="over_week.html"><b>Opening
-												Week <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+												Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 										Cr
 									</p>
 								</div>
@@ -156,9 +156,9 @@
 									<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 												class="sx">War</b></a><br>
 										<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-										<a href="over_week.html"><b>Opening Week $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+										<a href="over_week.html"><b>Opening Week:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 										<a href="over_week.html"><b>Opening
-												Week <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+												Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 										Cr
 									</p>
 								</div>
